# modore

./: .gitignore  .gitmodules  LICENSE  Makefile  README.en.md  README.md  modore.conf.example
bridge/: CMakeLists.txt  NOTICE.md
bridge/build-tools/: python
bridge/include/: mozc_bridge.h
bridge/src/: backend_atzc.cc  backend_candidates.cc  backend_candidates.h  backend_flow.cc  backend_flow.h  backend_google_ime_mac.cc  backend_iface.h  backend_oss.cc  direct_client.cc  direct_client.h  mozc_bridge.cc  shell_client_main.cc  shell_convert.cc
docs/: PARITY.md  configuration.md  linux.md  shell-integration.md
engine/: CMakeLists.txt  README.md
engine/exports/: modore_script.symbols  modore_script.version
engine/include/: mdr_classifier.h  mdr_text.h  modore_script.h  shadow_buffer.h
engine/src/: classifier.c  engine.c  engine_internal.h  engine_stub.c  marshal.c  pickup_core.c  reload.c  sandbox.c  shadow_buffer.c  utf8_nav.h
engine/tests/: smoke.c  test_acquire.c  test_candidates.c  test_classifier.c  test_engine.c  test_helpers.h  test_pickup.c  test_pickup_core.c  test_replacement.c  test_route.c  test_sandbox.c  test_text.c
native/common/: mozc_convert.hpp
native/linux/: Makefile  config.cpp  config.hpp  evdev_hotkey.cpp  evdev_hotkey.hpp  ipc.cpp  ipc.hpp  log.cpp  log.hpp  main.cpp  scripting.cpp  scripting.hpp
native/linux/core/: config.cpp  config.hpp  host_internal.hpp  host_runtime.cpp  host_state.cpp  host_util.cpp  log.cpp  log.hpp
native/linux/pickup/: clipboard_pickup.cpp  mozc_session.cpp  pick_heuristics.cpp  pickup.cpp
native/linux/platform/: clipboard.cpp  evdev_hotkey.hpp  ipc.cpp  ipc.hpp  scripting.cpp  wayland_hypr.cpp  x11_input.cpp
native/linux/systemd/user/: modore-host.service
native/macos/: BootGuards.swift  CarbonHotkey.swift  ConfigWatcher.swift  FrontmostApp.swift  Info.plist  Log.swift  Makefile  ModoreConfig.swift  MozcBridge.swift  StatusItem.swift  main.swift
native/macos/App/: Keycodes.swift  Preflight.swift  main.swift
native/macos/Config/: ConfigWatcher.swift  ModoreConfig.swift
native/macos/Diagnostics/: FrontmostApp.swift  Log.swift  SecureInputMonitor.swift
native/macos/Hotkey/: CarbonHotkey.swift  EventTap.swift  HotkeyDeliveryPolicy.swift  HotkeyDisplayPolicy.swift  HotkeyDisplayState.swift  HotkeyState.swift
native/macos/Pickup/: AccessibilityIO.swift  ChromiumOmniboxInputLog.swift  Classifier.swift  ClipboardSupport.swift  ClipboardTimingPolicy.swift  ConversionLog.swift  ConversionSession.swift  Cycle.swift  KnownApps.swift  LastConversion.swift  MozcBridge.swift  Pickup.swift  RerankClient.swift  ShadowBuffer.swift  SpanSplit.swift  SyntheticEvents.swift  Undo.swift
native/macos/Scripting/: ModoreScript.swift
native/macos/UI/: CFTypeGuards.swift  CandidatePanel.swift  DebugOverlay.swift  HUDPanel.swift  StatusItem.swift
native/macos/scripts/: setup-signing.sh
native/windows/: CMakeLists.txt  Makefile  app.cpp  app.hpp  config.cpp  config.hpp  cycle.cpp  cycle.hpp  ime.cpp  ime.hpp  log.cpp  log.hpp  main.cpp  pickup.cpp  pickup.hpp  textio.cpp  textio.hpp
scripts/: README.md  example-chrome.lua  example-discord.lua  example-line-acquire.lua  example-obsidian.lua  example-vscode.lua  modore-shell-bootstrap.fish  modore-shell-bootstrap.sh
test/macos/: KnownAppsTests.swift  ModoreConfigTests.swift  RegressionTests.swift  SpanSplitTests.swift
test/puppeteer/: modore-pipeline.mjs  package-lock.json  package.json
tools/: eval_classifier.py  train_classifier.py
tools/data/: classifier-eval-heldout.tsv  classifier-eval.tsv
tools/rerank/: README.md  eval.py  metrics.py  requirements.txt  rerankers.py  schema.py  serve.py
tools/rerank/data/: seed_homophones.jsonl
